--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "quill": "^1.3.6",
+    "ngx-cookie-service": "15.0.0",
+    "quill": "^1.3.7",
     "quill-emoji": "^0.2.0",
     "quill-image-resize-module": "^3.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "ngx-cookie-service": "15.0.0"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.8",
