--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "jwt-decode": "^3.1.2",
     "ngx-cookie-service": "15.0.0",
     "quill": "^1.3.7",
     "quill-emoji": "^0.2.0",
