Add a srating star system

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,10 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "include": [
+    "src/**/*.ts",
+    "node_modules/faker"
+  ]
+  
 }
